--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,14 +1,48 @@
 .CardHead {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     padding: 60px; 
-    width: 100%;
     color: #333;
-    text-align: center;
     border-top: 1px solid #ddd;
+    flex-wrap: wrap;
+    gap: 40px;
+    max-width: 100%;
+    text-align: center;
 }
 
-/* .CardBody {
+.Pprice{
+    color: #333;
+    font-weight: 600;
+    font-family: 'Rajdhani', sans-serif;
+    margin: 10px;
+}
+
+
+
+.CardBody {
     padding: 15px;
     border: 1px solid #ddd;
-} */
+}
+
+.Pname {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px;
+}
+
+.Pdescription {
+    font-family: "Times New Roman";
+    font-size: 20px;
+    margin: 10px;
+}
+
+button {
+    background-color: black;
+    color: #ddd;
+    border-radius: 12px;
+    padding: 2px 25px;
+    font-size: 20px;
+    margin: 10px;
+    text-decoration: none;
+}
